--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
             <version>1.27.0.0</version>
         </dependency>
 
+        <!--aliyunOSS-->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
         <!--第三方开源工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
