:whale: FastDFS在Docker中执行，新曾阿里云OSS实现

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -35,3 +35,10 @@ server.port=8080
 # 上传文件大小限制
 spring.servlet.multipart.max-file-size = 10Mb
 spring.servlet.multipart.max-request-size=100Mb
+
+#OSS
+java4all.file.endpoint=oss-cn-shanghai.aliyuncs.com 不同的服务器，地址不同
+java4all.file.keyid=去OSS控制台获取
+java4all.file.keysecret=去OSS控制台获取
+java4all.file.bucketname1=java4all-file 这个自己创建bucket时的命名，控制台创建也行，代码创建也行
+java4all.file.filehost=blog 文件路径，我这里是blog
