--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <version>1.3.1</version>
         </dependency>
 
+        <!--七牛-->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>7.2.14</version>
+        </dependency>
+
         <!--第三方开源工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
